Scrollbars are back, but the iframe still sizes the background based on the size of the window not the frame. Progress on issue #100

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   text-align: left;
-  overflow: hidden;
+  overflow: scroll;
 }
 h1 {
   border-bottom: 1px solid #1d4088;
